# jknife

./: .gitignore  README.md  pyproject.toml
examples/: sklearn_linear_example.py
jknife/: __init__.py  core.py  exceptions.py  interfaces.py  utils.py
jknife/contrib/: __init__.py  sklearn_adapters.py  statsmodels_adapters.py
jknife/tests/: test_core.py  test_sklearn_classification.py  test_sklearn_lasso.py  test_statsmodels_ols.py
