[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jknife"
version = "0.1.0"
authors = [
    {name = "Ryan O'Boyle", email = "layerdynamics@proton.me"},
]
description = "Framework-agnostic Jackknife estimation utilities for statistical modeling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "UNLICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
sklearn = [
    "scikit-learn>=1.0.0",
]
parallel = [
    "joblib>=1.0.0",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
]
all = [
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/LayerDynamics/jknife"
"Bug Tracker" = "https://github.com/LayerDynamics/jknife/issues"

[tool.setuptools]
packages = ["jknife"]
package-dir = {"jknife" = "jknife"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=jknife"
testpaths = [
    "jknife/tests",
]